src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Business</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Business Default</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>CXE Lead Process</fullName>
        <description>CXE Lead Process for CXE Lead Record Type</description>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Consumer</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Consumer Default</fullName>
        <isActive>false</isActive>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Address_from_Lead__c</fullName>
        <label>Address from Lead</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Barangay__c</fullName>
        <label>Barangay</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Check_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Check Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_Municipality__c</fullName>
        <label>City / Municipality</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Province__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>City_Municipality</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Completeness__c</fullName>
        <formula>IF(ISBLANK(Street) , 0, 0.10) + IF(ISBLANK(City) , 0, 0.10) + IF(ISBLANK(State) , 0, 0.10) + IF(ISBLANK(  PostalCode) , 0, 0.10) + IF(ISBLANK(Country) , 0, 0.10) + IF( ISBLANK(Email) , 0, 0.10) + IF( ISBLANK( Phone ) , 0, 0.10) + IF( ISBLANK(  MobilePhone ) , 0, 0.10) + IF( ISBLANK( FirstName ) , 0, 0.10) + IF( ISBLANK(  LastName  ) , 0, 0.10)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completeness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CreditScore__c</fullName>
        <label>Credit Score</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomerAcceptance__c</fullName>
        <label>Customer Acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Accepted under Conditions</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Lead Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( FirstName)=0,&quot;First Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(LEN(LastName)=0, &quot;Last Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Company)=0, &quot;Company, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone)=0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Salutation,&quot;&quot;), &quot;Salutation, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(City)=0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Email)=0, &quot;Email&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN( FirstName ) = 0, 0,15) + IF(LEN( LastName ) = 0, 0,15) + IF(LEN( Company ) = 0, 0,15) + IF(LEN( Phone ) = 0, 0,15) + IF( ISPICKVAL( Salutation,&quot;&quot;), 0,10) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,10) + IF( LEN( City ) = 0, 0,10) + IF( LEN( Email ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaysSinceLastActivity__c</fullName>
        <formula>IF(TODAY() = LastActivityDate, &quot;Today&quot;, IF(ISBLANK(LastActivityDate),&quot;Never&quot;, TEXT(TODAY()-LastActivityDate) &amp; &quot; Days Ago&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EnterpriseNumber__c</fullName>
        <label>Enterprise Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HousingSituation__c</fullName>
        <label>Housing Situation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home Owner</fullName>
                </value>
                <value>
                    <fullName>Rented through Agency</fullName>
                </value>
                <value>
                    <fullName>Rented through Landlord</fullName>
                </value>
                <value>
                    <fullName>Private arrangement</fullName>
                </value>
                <value>
                    <fullName>Council Property</fullName>
                </value>
                <value>
                    <fullName>Housing association</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry/ies</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advertising</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Business Services</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospitality</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Machinery</fullName>
                </value>
                <value>
                    <fullName>Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Not For Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Recreation</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InterestIn__c</fullName>
        <label>Interest In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Affordable energie</fullName>
                </value>
                <value>
                    <fullName>Isolation</fullName>
                </value>
                <value>
                    <fullName>Solar Panels</fullName>
                </value>
                <value>
                    <fullName>E-Thermostat (NEST)</fullName>
                </value>
                <value>
                    <fullName>Boiler Service</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Electricity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Converted__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is mapped to the Account during Lead conversion to check if the Account is a converted lead. Default Value: Checked</description>
        <label>Is Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <formula>$RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_of_Lead_Owner__c</fullName>
        <formula>Owner:User.ManagerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager of Lead Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Campaign__c</fullName>
        <label>Marketing Campaign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accredited Meralco Contractors</fullName>
                </value>
                <value>
                    <fullName>Barangay Day</fullName>
                </value>
                <value>
                    <fullName>Bright Ideas</fullName>
                </value>
                <value>
                    <fullName>Electric Vehicles (EV)</fullName>
                </value>
                <value>
                    <fullName>Kload Caravans</fullName>
                </value>
                <value>
                    <fullName>Kuryente Load/Prepaid Service</fullName>
                </value>
                <value>
                    <fullName>Meralco Biz Campaign</fullName>
                </value>
                <value>
                    <fullName>Meralco Biz Digital Campaign</fullName>
                </value>
                <value>
                    <fullName>Meralco Corporate Partners Campaign</fullName>
                </value>
                <value>
                    <fullName>Meralco Advisory</fullName>
                </value>
                <value>
                    <fullName>Meralco Luminaries</fullName>
                </value>
                <value>
                    <fullName>Meralco&apos;s Peak / Off Peak Program</fullName>
                </value>
                <value>
                    <fullName>Move App</fullName>
                </value>
                <value>
                    <fullName>Monthly Update on Electricity Rates</fullName>
                </value>
                <value>
                    <fullName>Net Metering</fullName>
                </value>
                <value>
                    <fullName>Orange Tag</fullName>
                </value>
                <value>
                    <fullName>Power Up Forum Series</fullName>
                </value>
                <value>
                    <fullName>Power Ideas</fullName>
                </value>
                <value>
                    <fullName>Power Club Magazine</fullName>
                </value>
                <value>
                    <fullName>Power Club Golf</fullName>
                </value>
                <value>
                    <fullName>Power Lab</fullName>
                </value>
                <value>
                    <fullName>Power Interruption/Maintenance Schedules</fullName>
                </value>
                <value>
                    <fullName>Solar Energy</fullName>
                </value>
                <value>
                    <fullName>Typhoon Watch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label># of Employees</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oppurtunity_Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppurtunity Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Designation__c</fullName>
        <label>Position/Designation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreferredChannel__c</fullName>
        <label>Preferred Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>E-Mail</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreferredContactHour__c</fullName>
        <label>Preferred Contact Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreferredStartDate__c</fullName>
        <label>Preferred Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Province</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refer_By__c</fullName>
        <label>Referred By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <label>Referred To</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Lead_Source__c</fullName>
        <label>Secondary Lead Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AMC/Contractors</fullName>
                </value>
                <value>
                    <fullName>Bill ads</fullName>
                </value>
                <value>
                    <fullName>Blogs</fullName>
                </value>
                <value>
                    <fullName>Brochure/flyer</fullName>
                </value>
                <value>
                    <fullName>Call center</fullName>
                </value>
                <value>
                    <fullName>Call Center Inquiries</fullName>
                </value>
                <value>
                    <fullName>Cinema</fullName>
                </value>
                <value>
                    <fullName>Customer Engagements</fullName>
                </value>
                <value>
                    <fullName>Email Blasts</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Forums</fullName>
                </value>
                <value>
                    <fullName>Friend and Colleague</fullName>
                </value>
                <value>
                    <fullName>Government Units (LGU/NGU)</fullName>
                </value>
                <value>
                    <fullName>Instagram</fullName>
                </value>
                <value>
                    <fullName>Linked-In</fullName>
                </value>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Marketing Campaigns</fullName>
                </value>
                <value>
                    <fullName>Meralco employee</fullName>
                </value>
                <value>
                    <fullName>Meralco Forums/Events</fullName>
                </value>
                <value>
                    <fullName>Meralco Website</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>Online Ads</fullName>
                </value>
                <value>
                    <fullName>OOH - Billboards, banners and posters</fullName>
                </value>
                <value>
                    <fullName>Partner Association Forums/Events</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Search Engine/Web Search</fullName>
                </value>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                </value>
                <value>
                    <fullName>Tradeshow and  Conventions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Name__c</fullName>
        <label>Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <label>House #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subdivision__c</fullName>
        <label>Subdivision / Bldg Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone__c</fullName>
        <label>Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Unit_No__c</fullName>
        <label>Unit #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Mobile_Country_Code__c</fullName>
        <label>Mobile Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>US</fullName>
                    <default>true</default>
                    <label>US</label>
                </value>
                <value>
                    <fullName>AC</fullName>
                </value>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Business_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.CXE_Lead</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Business Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ConsumerLeads_Lead</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.CXE_Lead</value>
        </filters>
        <filters>
            <field>LEAD.COMPANY</field>
            <operation>equals</operation>
        </filters>
        <label>All Consumer Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>CXE_Lead</fullName>
        <active>true</active>
        <businessProcess>CXE Lead Process</businessProcess>
        <description>CXE Lead Record Type</description>
        <label>Lead</label>
    </recordTypes>
    <recordTypes>
        <fullName>Industrial_Customer</fullName>
        <active>true</active>
        <businessProcess>Business</businessProcess>
        <label>Industrial Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Residential_Customer</fullName>
        <active>true</active>
        <businessProcess>Consumer</businessProcess>
        <label>Residential Consumer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail_Energy_Supplier</fullName>
        <active>false</active>
        <businessProcess>Business</businessProcess>
        <label>Retail Energy Supplier</label>
    </recordTypes>
    <recordTypes>
        <fullName>Streetlight_Customer</fullName>
        <active>false</active>
        <businessProcess>Business</businessProcess>
        <label>Streetlight Customer</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>CXE_First_Name_Validation</fullName>
        <active>true</active>
        <description>Make first name required</description>
        <errorConditionFormula>ISBLANK(FirstName)</errorConditionFormula>
        <errorMessage>First Name is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_MobileEmailPhone</fullName>
        <active>true</active>
        <description>One of the these fields must be populated: Mobile, Phone or Email.</description>
        <errorConditionFormula>AND(ISBLANK(MobilePhone),
ISBLANK(Email),
ISBLANK(Phone)
)</errorConditionFormula>
        <errorMessage>One of the these fields must be populated: Mobile, Phone or Email.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_MobilePhoneShouldOnlyContainNumbers</fullName>
        <active>true</active>
        <description>Validation rule to restrict Mobile Phone field value to numbers only.</description>
        <errorConditionFormula>AND(NOT(ISBLANK( MobilePhone )), NOT(ISNUMBER( MobilePhone )))</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile Phone should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_PhoneShouldOnlyContainNumbers</fullName>
        <active>true</active>
        <description>Validation rule to restrict Phone field value to numbers only.</description>
        <errorConditionFormula>AND( 
NOT(ISBLANK( Phone  )), 
NOT(ISNUMBER( Phone  )) 
)</errorConditionFormula>
        <errorDisplayField>Phone</errorDisplayField>
        <errorMessage>Phone should only contain numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_User_Is_Not_Lead_Owner</fullName>
        <active>true</active>
        <description>Only the lead owner or the lead owner&apos;s manager shall be able to change the ownership of a lead record.</description>
        <errorConditionFormula>AND(
ISCHANGED(OwnerId),
AND(PRIORVALUE(OwnerId) &lt;&gt; $User.Id, PRIORVALUE(Manager_of_Lead_Owner__c) &lt;&gt; $User.Id),
NOT($Profile.Name = &quot;System Administrator&quot;) 
)</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Only the lead owner or the lead owner&apos;s manager can transfer the ownership of a lead record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CXE_Validate_Mobile_Number_Format</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK(MobilePhone)), 
NOT(REGEX(MobilePhone,&quot;[+][6][3][0-9]{10}&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>MobilePhone</errorDisplayField>
        <errorMessage>Mobile Phone should start with +63 then followed by 10-digit number.</errorMessage>
    </validationRules>
</CustomObject>